add first test case for Tree